# sport_bot

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
migrations/: env.py
migrations/versions/: 1e109e3a0f49_create_table_statistics_approaches.py  223d2c034a4e_cretae_statistics_models.py  2805d8614fbe_init.py  569ae831fea2_add_users.py  9ffe0562e8b7_table_file.py  b3d2a439022e_add_filed_telegram_id_image.py  bcdb62105258_init_tabl_program.py  fe38f4e1ecd1_add_field_user_id_in_statistics_.py
src/: config.py  database.py  main.py
src/bot/: utils.py
src/bot/handlers/: base.py  commands.py  import_file.py  menu_program.py  menu_statistic.py
src/bot/keyboard/inline/: menu_keyboard.py  program_keyboard.py  statistic_keyboard.py
src/bot/middlewares/: permission.py  registration.py  throttling.py
src/programs/: constants.py  db.py  import_file.py  models.py  schemas.py  service.py
src/statistic/: db.py  models.py  schemas.py  service.py
src/statistics/: models.py
src/user/: db.py  models.py  schemas.py
