[tool.poetry]
name = "sport-bot"
version = "0.1.0"
description = ""
authors = ["OleksiiMartseniuk <martsenyk.oleksii@ezcloudllc.com>"]
readme = "README.md"
packages = [{include = "sport_bot"}]

[tool.poetry.dependencies]
python = "^3.11"
python-dotenv = "^0.21.1"
sqlalchemy = "^1.4.46"
alembic = "^1.9.2"
asyncpg = "^0.27.0"
python-telegram-bot = "^20.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
